# cn-scraper-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.en.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: canary.yml  ci.yml  publish.yml
.understand-anything/: .understandignore
docs/: architecture.md
plugin_template/: adapter.py  pyproject.toml
scripts/: canary_runner.py  docker_test.sh  mcp_smoke_test.py  platform_health.py  release.py
skills/: SKILL.md
src/cn_scraper_mcp/: __init__.py  adapter.py  aggregate.py  auth.py  auth_diagnostics.py  auth_verify.py  cli.py  compare.py  cookie_harvest.py  dedup.py  diagnostics.py  errors.py  http.py  logging.py  models.py  plugin.py  secure_storage.py  server.py  session.py  validation.py
src/cn_scraper_mcp/engines/: __init__.py  bilibili.py  cdp.py  dianping.py  douban.py  douyin.py  jd.py  pdd.py  taobao.py  weibo.py  xiaohongshu.py  zhihu.py  zsxq.py
src/ecom_scraper_mcp/: server.py
src/ecom_scraper_mcp/engines/: __init__.py  taobao.py
tests/: __init__.py  conftest.py  test_adapter.py  test_aggregate.py  test_auth.py  test_auth_diagnostics.py  test_auth_verify.py  test_bilibili.py  test_canary.py  test_cdp.py  test_cli.py  test_compare.py  test_concurrency.py  test_cookie_harvest.py  test_dedup.py  test_dianping.py  test_douban.py  test_douyin.py  test_engine_exports.py  test_errors.py  test_guided_login.py  test_http.py  test_jd.py  test_logging.py  test_models.py  test_pdd.py  test_platform_health.py  test_plugin.py  test_release_script.py  test_secure_storage.py  test_server_error_mapping.py  test_session.py  test_taobao.py  test_validation.py  test_weibo.py  test_xiaohongshu.py  test_zhihu.py  test_zsxq.py
