[project]
name = "cn-scraper-mcp"
version = "0.1.0"
description = "MCP server for scraping Chinese web platforms — Taobao, JD, Xiaohongshu, and more. Breaks through anti-bot walls."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "goes_by" }]
keywords = ["mcp", "scraper", "taobao", "jd", "ecommerce", "china", "price-comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "curl_cffi>=0.7",
    "websockets>=13",
]

[project.scripts]
cn-scraper-mcp = "cn_scraper_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio", "pytest-cov", "python-dotenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]

[tool.setuptools.packages.find]
where = ["src"]
